# firehose

./: .env.template  .gitignore  README.md  TODO.md  devenv.nix  devenv.yaml  docker-compose.yaml  flake.nix
deploy/: dev.yaml  devenv.nix
docs/: plan.md  research.md
services/review/: .gitignore  Cargo.toml  devenv.nix
services/review/src/: producer.rs  utils.rs
tools/kafka/: devenv.nix  flake.nix
